Add navbar animation

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,4 @@
 body {
-  overflow: hidden;
+  padding: 4rem;
 }
 
-body, section {
-  padding-top: 50px;
-}
-
-.scrollspy-example {
-  position: relative;
-  height: 300px;
-  overflow: auto;
-}
